--- a/topic.html
+++ b/topic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>Topic</title>
+  <title>Home</title>
     <link rel="stylesheet" href="newstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
@@ -17,10 +17,9 @@
 <div class = "menu-bar">
   <ul>
     <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a><i class="fas fa-book-medical"></i>Topic</a>
+    <li><a href="topic.html"><i class="fas fa-book-medical"></i>Topic</a>
        <div class = "sub-menu-1">
         <ul>
-          <li><a href="topic.html">Topic</a></li>
           <li><a href="opp.html">Opportunites</a></li>
           <li><a href="risk.html">Risks</a></li>
           <li><a href="choices.html">Choice</a></li>
@@ -49,10 +48,13 @@
  
 
 <!-- Main content -->
-<h1>Topic: Technology in Healthcare, artificial body parts and organs.</h1>
+<h1><div class="t-center">Topic: Technology in Healthcare, artificial body parts and organs.</div></h1>
 
 <br>
 <br>
+<br>
+<br>
+
 
 <h1>Why we chose this topic?</h1>
 <br>
@@ -67,9 +69,7 @@
 
 <h1>What are artificial body parts?</h1>
 <br>
-<p>In medicine, a prosthesis or prosthetic implant is an artificial
-device that replaces a missing body part, which may be lost
-through trauma, disease, or a condition present at birth.
+<p>In medicine, a prosthesis or prosthetic implant is an artificial device that replaces a missing body part, which may be lost through trauma, disease, or a condition present at birth. 
 </p>
 
 <br>
@@ -79,20 +79,35 @@ through trauma, disease, or a condition present at birth.
 
 <h1>So what is the purpose of artificial body parts and organs? </h1>
 <br>
-<p><img src="img/robotarm.jpg" alt="arm" style="float: right; margin-left: 15px;">
+<p><img src="img/robotarm.jpg" alt="arm" style="float: right;">
 The purpose of artificial body parts and organs is to imitate the the movement and functionality of a real body part or limb. This allows people who have lost a body part or organ through, trauma, sickness or condition at birth to have that body part replaced.</p>
 
 
 <br>
 <br>
 <br>
-  <br>
 <br>
 <br>
-  <br>
 <br>
 <br>
 
+<h1>Information about artificial body parts and organs</h1>
+<br>
+
+<p>The earliest known artificial body parts are artificial toes that were from ancient Egypt, followed closely by synthetic legs from ancient Rome. The technology of artificial body parts rapidly developed in the nineteenth and twentieth centuries, and just like modern artificial body parts they incorporated electrical and mechanical components. Eventually during the process of developing prostheses, Rehabilitation engineers discovered that myoelectric control could allow people to learn how to control and how to properly manoeuvre artificial limbs.</p>
+<br>
+<br>
+
+<p>
+The process for myoelectric control to work is by putting one or more sensors into a fabricated socket to which the prosthetic body part is attached to. The brain receives electrical signals from the sensors and learns how to activate and control the motors to move and manipulate the certain artificial body part. 
+</p>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 <footer id="footer">
 
