--- a/process.html
+++ b/process.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>Process</title>
+  <title>Home</title>
     <link rel="stylesheet" href="newstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
@@ -17,10 +17,9 @@
 <div class = "menu-bar">
   <ul>
     <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a><i class="fas fa-book-medical"></i>Topic</a>
+    <li><a href="topic.html"><i class="fas fa-book-medical"></i>Topic</a>
        <div class = "sub-menu-1">
         <ul>
-          <li><a href="topic.html">Topic</a></li>
           <li><a href="opp.html">Opportunites</a></li>
           <li><a href="risk.html">Risks</a></li>
           <li><a href="choices.html">Choice</a></li>
