--- a/risk.html
+++ b/risk.html
@@ -17,10 +17,9 @@
 <div class = "menu-bar">
   <ul>
     <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a><i class="fas fa-book-medical"></i>Topic</a>
+    <li><a href="topic.html"><i class="fas fa-book-medical"></i>Topic</a>
        <div class = "sub-menu-1">
         <ul>
-          <li><a href="topic.html">Topic</a></li>
           <li><a href="opp.html">Opportunites</a></li>
           <li><a href="risk.html">Risks</a></li>
           <li><a href="choices.html">Choice</a></li>
@@ -46,22 +45,25 @@
    </ul>
 </div>
 <br>
+<br>
  
 
 <!-- Main content -->
-<h1>The Risks of artificial body parts and organs</h1>
+<h1><div class="t-center">The Risks of artificial body parts and organs</div></h1>
 
 <br>
 <br>
+<br>
+<br>
 
-<br>
-<br>
   <h1>Conceptualisation</h1>
  <br>
  <p>
 The use of artificial body parts allows people to view a person as a machine-like object rather than a human being. The possibility of a body part or organ being replaced, alters the perception of what the normal body status is, as it is confirming body parts are replaceable objects. This can be devaluing for a person with an artificial body part and made them to feel different than everyone else. Walker (2019) conducted a study which argues that the status of a ‘normal’ human being relies on the relationship of a body to a person, and if a prosthesis allows someone to feel human again then everyone should view artificial body parts as ordinary. “In approaching ethical issues surrounding prostheses, it is appropriate to regard them as more like body parts than like objects”, (Walker, 2019). In the future, the technological advances in artificial body parts may increase a more “natural seeming experience” (Svenaeus 2010) which supports the way people with prostheses is looked at. It may also be hard for the people with artificial body parts to accept the fact that they are relying on a piece of technology to function. This may impact their behaviour and be hard for them to identify with. 
 </p>
 
+<br>
+<br>
 <br>
 <br>
 
@@ -72,12 +74,16 @@ The use of artificial body parts allows people to view a person as a machine-lik
 
 <br>
 <br>
+<br>
+<br>
   
 <h1>Price</h1>
 <br>
  
 <p>Another problem is the price of even doing the procedure to implement the artificial body part or organ. Since there is a possibility that the body would reject the artificial organ or body part, putting down thousands of dollars to put in the device is sometimes just a huge risk in itself for people who don’t have that financial security or stability.</p>
 
+<br>
+<br>
 <br>
 <br>
   
@@ -88,6 +94,8 @@ The use of artificial body parts allows people to view a person as a machine-lik
  
  <br>
  <br>
+ <br>
+<br>
 
 <h1>Distributive Justice</h1>
 <br>
@@ -97,6 +105,9 @@ The use of artificial body parts allows people to view a person as a machine-lik
 
 <br>
 <br>
+<br>
+<br>
+
   
 <h1>Human Augmentation</h1>
 <br>
@@ -106,9 +117,13 @@ The use of artificial body parts allows people to view a person as a machine-lik
   
 <br>
 <br>
-  <br>
 <br>
-  <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <br>
 
 <footer id="footer">
