--- a/topic.html
+++ b/topic.html
@@ -99,7 +99,7 @@ The purpose of artificial body parts and organs is to imitate the the movement a
 <br>
 
 <p>
-The process for myoelectric control to work is by putting one or more sensors into a fabricated socket to which the prosthetic body part is attached to. The brain receives electrical signals from the sensors and learns how to activate and control the motors to move and manipulate the certain artificial body part.(Baecker 2019)
+The process for myoelectric control to work is by putting one or more sensors into a fabricated socket to which the prosthetic body part is attached to. The brain receives electrical signals from the sensors and learns how to activate and control the motors to move and manipulate the certain artificial body part.(Baecker, 2019)
 </p>
 
 <br>
