--- a/brendon.html
+++ b/brendon.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>Home</title>
+  <title>Vincent's Ethical Reflection</title>
     <link rel="stylesheet" href="newstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
@@ -46,53 +46,30 @@
    </ul>
 </div>
 <br>
-<br>
-
  
 
 <!-- Main content -->
 <h1>Ethical Reflections</h1>
-
-
-
-<table>
-  <tr>
-    <th>Student Name</th>
-    <th>Student ID</th>
-    <th>Reflection</th>
-  </tr>
-  <tr>
-    <td>Brooklyn Lam</td>
-    <td>180245473</td>
-    <td><a href="brook.html"> link</a></td>
-  </tr>
-  <tr>
-    <td>Vincent Kong</td>
-    <td>20112750</td>
-    <td><a href="vincent.html">Link</a></td>
-  </tr>
-  <tr>
-    <td>Jin Hyuck Kim</td>
-    <td>18026228</td>
-    <td><a href="brendon.html">Link</a></td>  </tr>
-</table>
-
-
-
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
+<br>
 <br>
 
+<div class="container">
+<p><div class="bold">Student Name: Jin Hyuck Kim</div>
+  <br><br>
+    <div class = "bold">Student ID: 18026228</div>
+    <br><br>
 
+
+
+
+</p>
+
+</div>
+
+
+ <br>
+ <br>
+ <br>
 
 
 <footer id="footer">
