--- a/choices.html
+++ b/choices.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>Home</title>
+  <title>Choices</title>
     <link rel="stylesheet" href="newstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
@@ -17,12 +17,12 @@
 <div class = "menu-bar">
   <ul>
     <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a><i class="fas fa-book-medical"></i>Topic</a>
+    <li><a href="topic.html"><i class="fas fa-book-medical"></i>Topic</a>
        <div class = "sub-menu-1">
         <ul>
           <li><a href="opp.html">Opportunites</a></li>
           <li><a href="risk.html">Risks</a></li>
-          <li><a href="choice.html">Choice</a></li>
+          <li><a href="choices.html">Choice</a></li>
         </ul>
        </div> 
     </li>
@@ -37,32 +37,70 @@
     <li><a><i class="fas fa-info-circle"></i>About</a>
       <div class = "sub-menu-1">
         <ul>
-          <li><a href="opp.html">References</a></li>
-          <li><a href="risk.html">Process Support</a></li>
+          <li><a href="references.html">References</a></li>
+          <li><a href="process.html">Process Support</a></li>
         </ul>
       </div>
     </li>  
    </ul>
 </div>
+<br>
+ 
 
 <!-- Main content -->
-<h1>CTiS: Impact of Technology in Health Care</h1>
+<h1><div class="t-center">Choices</div></h1>
+
+<br>
+<br>
 <br>
 <br>
 
+  <h1>Improving security </h1>
+  <br>
+<p>Improving the security of a bionic limb or artificial organ is a top priority in improving the device. Due to bionic limbs gaining access to the cloud, cyber attacks on bionic limbs or organs can become more prevalent. "It is now of crucial importance for the developers of such technologies to collaborate with cybersecurity solution vendors. That will allow us to make even theoretical cases of attacks on the human body impossible." (Chekh, 2019). If developers of such technology team up with cybersecurity solution vendors, then cyber attacks on people with artificial limbs and organs will become an extremely rare occurrence, and in the long run this will allow people who rely on this technology to feel safe knowing that the security of their artificial body or limb is well developed an robust preventing any external attacks.
+</p>
 
-<p>This mock-up site is intended to support your team project so you can take this as a set of files and as a starting point and adapt it to your preference. 
-It is built on a W3C site tutorial so does not claim to be flash, but now has an image, [of a paper we wrote a while back on CSED4G (Computing Education for the Social Good)]</p>
-<p>The site is not particularly well presented, but as the site uses HTML and has been styled with CSS it can be regarded as a <em>"minimum viable product"</em> for the purposes of this project&hellip;
-It has some default links, which you can take as a start for your site structure.  The <em>Process Support </em>Links provides guidance which will be needed for presenting your final project. </p>
+<br>
+<br>
+<br>
+<br>
+
+  <h1>Improving Performance</h1>
+  <br>
+<p>Bionic limbs still have a long way to go before they achieve the full range of motion, control and sensitivity of ‘biological’ limbs, so one of the main goals for the future of prosthetics or prosthesis is to improve the overall performance of the device. In doing so, developers can create bionic limbs that can be equal to biological limbs, this will help people who have lost limbs through trauma, illness, or a condition at birth feel what it is like to have a biological limb. 
+</p>
+
+   <br>
+   <br>
+   <br>
+<br>
+   
+   <h1>What can be expected in the future?</h1>
+ <br>
+ 
+   <p>Prosthesis will play an important role in the future technological and medical industry, as it is only a substitute for body parts and it has its own advantages (Mass production, customized for individual purposes). “The next five to ten years could bring in phenomenal advancement."(Michael McLoughlin, 2014) if the mass reproduction of this technology can become available for the public then people with missing limbs or need replacement for their organ can feel relieved that they don’t need to wait for a long time for a donor of the particular organ they need, this will also help with lower the price of the artificial organs and limbs due to their being a bigger supply of available transplant organs or limbs. 
+</p>
+  <br>
+  <p>It is also safe to say that when viewing prostheses we can approach it as a body rather than a object.“In approaching ethical issues surrounding prostheses, it is appropriate to regard them as more like body parts than like objects”, (Walker, 2019), this will help with the problem of people viewing another person who uses a prosthetic or prosthesis as an object rather than an actual human being
+</p>
 
 
-<!-- Sign and date the page, it's only polite! -->
-<address>Made 1 March 2021<br>
-  by Tony Clear.</address>
+  <br>
+   <br>
+     <br>
+   <br>
+     <br>
+   <br>  <br>
+   <br>
 
+<footer id="footer">
 
-<script type="text/javascript" src="java.js"></script> 
+    <div class="copyright">
+    <p>Assignment 3</p>
+    </div>
+
+  <script type="text/javascript" src="java.js"></script>
+</footer>
 
 </div>
 </div>
