--- a/opp.html
+++ b/opp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>Home</title>
+  <title>Opportunities</title>
     <link rel="stylesheet" href="newstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
@@ -17,12 +17,12 @@
 <div class = "menu-bar">
   <ul>
     <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a><i class="fas fa-book-medical"></i>Topic</a>
+    <li><a href="topic.html"><i class="fas fa-book-medical"></i>Topic</a>
        <div class = "sub-menu-1">
         <ul>
           <li><a href="opp.html">Opportunites</a></li>
           <li><a href="risk.html">Risks</a></li>
-          <li><a href="choice.html">Choice</a></li>
+          <li><a href="choices.html">Choice</a></li>
         </ul>
        </div> 
     </li>
@@ -37,33 +37,91 @@
     <li><a><i class="fas fa-info-circle"></i>About</a>
       <div class = "sub-menu-1">
         <ul>
-          <li><a href="opp.html">References</a></li>
-          <li><a href="risk.html">Process Support</a></li>
+          <li><a href="references.html">References</a></li>
+          <li><a href="process.html">Process Support</a></li>
         </ul>
       </div>
     </li>  
    </ul>
 </div>
+<br>
+<br>
 
 <!-- Main content -->
-<h1>CTiS: Impact of Technology in Health Care</h1>
+  <h1><div class="t-center">What Opportunities are there for artificial body parts and organs?</div></h1>
+
 <br>
 <br>
 
+<p>“The use of artificial organs is likely to increase in the future, given technological advances, increases in chronic diseases, and limited donor organs” (Walker 2021), so there is no telling what new doors could artificial body parts lead to.</p>
 
-<p>This mock-up site is intended to support your team project so you can take this as a set of files and as a starting point and adapt it to your preference. 
-It is built on a W3C site tutorial so does not claim to be flash, but now has an image, [of a paper we wrote a while back on CSED4G (Computing Education for the Social Good)]</p>
-<p>The site is not particularly well presented, but as the site uses HTML and has been styled with CSS it can be regarded as a <em>"minimum viable product"</em> for the purposes of this project&hellip;
-It has some default links, which you can take as a start for your site structure.  The <em>Process Support </em>Links provides guidance which will be needed for presenting your final project. </p>
+<br>
+<br>
+<br>
+
+<h1>Appearance</h1>
+<br>
+
+<p><img src="img/naarm.jpg" alt="natural" style="float:left; width: 300px; margin-right:15px;">
+For people who receive artificial limbs to replace the certain type of limb on the area affected, sometimes they can feel embarrassed about the  bionic look of the limb due to it not looking like the "norm", though this may not affect everyone there has been efforts of trying to give bionic limbs a more natural appearance, and if this doesn’t apply to a individual they can always do their own customization that gives their arm a more unique look and feel.
+</p>
 
 
-<!-- Sign and date the page, it's only polite! -->
-<address>Made 1 March 2021<br>
-  by Tony Clear.</address>
+<br>
+<br>
+<br>
+<br>
 
+<h1>Control</h1>
+<br>
 
-<script type="text/javascript" src="java.js"></script> 
+<p><img src="img/nerarm.jpg" alt="nervous system" style="float:right; width: 450px; height:350px ;margin-left:15px;">
+Obviously one of the main purposes of the bionic limbs is to make the prosthetic more responsive to the user’s commands. Prosthetics have been shown to be able to move, however not with the full range of motion like an actual limb. Over the years engineers have been working hard to create a system that is more responsive, has  the full range of motion like an actual limb and to make it more functional. One of the main methods of creating a more responsive prosthetic has been linking the artificial limb to the user's mind. This allows the limb  to receive commands from the central nervous system with quicker response times with less lag. This allows the limb to recreate normal movement and functionality, and instantly triggers the desired movement, creating a more fluid and natural feel for the user when using the limb.
+</p>
 
+<br>
+<br>
+<br>
+<br>
+
+<h1>Production</h1>
+
+<br>
+
+<p>As of right now artificial body parts and organs are not available to everyone who is in need of prostheses, however we can expect there to be mass reproduction of artificial body parts. With the advancement of technology we can expect that mass reproduction will make the development of artificial body parts and organs cheaper to make, and will become readily available for people that need these artificial body parts. “I think we are just getting started… There is just a tremendous amount of potential ahead of us, and we've just started down this road. And I think the next five to 10 years are going to bring phenomenal advancement.” (Michael McLoughlin, 2014). Another benefit will be that since there is mass reproducion of these prosthetics devices is that this will shorten waiting times for people who are waiting for a transplant organ, the waiting time depends on what transplant organ is required for example the heart. Someone who is waiting for a heart transplant will need to wait up to 4months; this may sound short however due to the heart being an extremely important organ 4 months could be too long of a wait for certain individuals. The mass reproduction of these prosthetics will shorten the wait time, and will further decrease the amount of deaths caused by the wait time of a needed transplant organ.</p>
+
+<br>
+<br>
+<br>
+<br>
+
+  <h1>Helping the elderly</h1>
+<br>
+  <p>Elderly people face many challenges when it comes to their motor skills, cognitive abilities and their senses. Due to their old age their motor skills can deteriorate making everyday tasks challenging for them, while their cognitive abilities get worse due to illnesses like alzeihmers that affects their memory, and even their senses worsen like their vision or hearing due to the deterioration of their retina or cochlea. The technology to help the elderely is already out there and still being improved on. Though there may still not be an artificial brain that can be implanted, there is promising work of a “pacemaker” type device for the brain; it has shown that it can enhance the memory in some epilepsy patients(Baeker, 2019), this device can also help in patients with alzeihmers, due to the illness causing memory loss, confusion, the inability to learn new things and a lot of other symptoms that doesn’t allow for the patient to be able to process things properly, this artificial brain can help in lessening the effects of these symptoms or even negate the effects entirely. Not only is there an artificial brain being developed, there is the artificial retina. The artificial retina can be used for people who have lost their vision or for people who are losing their vision, this can help a lot of people who are starting to develop visual impairments.</p> 
+
+<br>
+<br>
+<br>
+<br>
+
+  <h1>Replacing and Improving</h1>
+<br>
+  <p>One of the main purposes for artificial body parts is to replace the area that has a missing body part or to improve the functionality of the body part. A good example of an implant that improves the functionality of a body part or organ is the pacemaker.  The first clinically successful pacemaker was invented in 1960. The pacemaker is implanted into the heart, and the small computer that is in the pacemaker helps regulate abnormal heartbeat, however pacemakers are still categorized under artificial body parts, while the artificial organ is the artificial heart. Artificial hearts are a good example of an artificial organ fully replacing a biological organ. Artificial hearts should not be mistaken for pacemakers, one regulates abnormal heartbeat, while the other fully replaces the heart itself. Artificial hearts are utilized when there is total heart failure or when someone is on the waiting list for a heart transplant. </p>
+<br>
+  <br>
+  <br>
+  <br>
+  <br>
+
+<footer id="footer">
+
+    <div class="copyright">
+    <p>Assignment 3</p>
+    </div>
+
+  <script type="text/javascript" src="java.js"></script>
+</footer>
+ 
 </div>
 </div>
 
