--- a/risk.html
+++ b/risk.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>Home</title>
+  <title>Risks</title>
     <link rel="stylesheet" href="newstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
@@ -17,12 +17,12 @@
 <div class = "menu-bar">
   <ul>
     <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a><i class="fas fa-book-medical"></i>Topic</a>
+    <li><a href="topic.html"><i class="fas fa-book-medical"></i>Topic</a>
        <div class = "sub-menu-1">
         <ul>
           <li><a href="opp.html">Opportunites</a></li>
           <li><a href="risk.html">Risks</a></li>
-          <li><a href="choice.html">Choice</a></li>
+          <li><a href="choices.html">Choice</a></li>
         </ul>
        </div> 
     </li>
@@ -37,32 +37,103 @@
     <li><a><i class="fas fa-info-circle"></i>About</a>
       <div class = "sub-menu-1">
         <ul>
-          <li><a href="opp.html">References</a></li>
-          <li><a href="risk.html">Process Support</a></li>
+          <li><a href="references.html">References</a></li>
+          <li><a href="process.html">Process Support</a></li>
         </ul>
       </div>
     </li>  
    </ul>
 </div>
+<br>
+<br>
+ 
 
 <!-- Main content -->
-<h1>CTiS: Impact of Technology in Health Care</h1>
+<h1><div class="t-center">The Risks of artificial body parts and organs</div></h1>
+
+<br>
+<br>
 <br>
 <br>
 
+  <h1>Conceptualisation</h1>
+ <br>
+ <p>
+The use of artificial body parts allows people to view a person as a machine-like object rather than a human being. The possibility of a body part or organ being replaced, alters the perception of what the normal body status is, as it is confirming body parts are replaceable objects. This can be devaluing for a person with an artificial body part and made them to feel different than everyone else. Walker (2019) conducted a study which argues that the status of a ‘normal’ human being relies on the relationship of a body to a person, and if a prosthesis allows someone to feel human again then everyone should view artificial body parts as ordinary. “In approaching ethical issues surrounding prostheses, it is appropriate to regard them as more like body parts than like objects”, (Walker, 2019). In the future, the technological advances in artificial body parts may increase a more “natural seeming experience” (Svenaeus 2010) which supports the way people with prostheses is looked at. It may also be hard for the people with artificial body parts to accept the fact that they are relying on a piece of technology to function. This may impact their behaviour and be hard for them to identify with. 
+</p>
 
-<p>This mock-up site is intended to support your team project so you can take this as a set of files and as a starting point and adapt it to your preference. 
-It is built on a W3C site tutorial so does not claim to be flash, but now has an image, [of a paper we wrote a while back on CSED4G (Computing Education for the Social Good)]</p>
-<p>The site is not particularly well presented, but as the site uses HTML and has been styled with CSS it can be regarded as a <em>"minimum viable product"</em> for the purposes of this project&hellip;
-It has some default links, which you can take as a start for your site structure.  The <em>Process Support </em>Links provides guidance which will be needed for presenting your final project. </p>
+<br>
+<br>
+<br>
+<br>
 
+<h1>Health and Safety</h1>
+ <br>
+  
+  <p>Humans functioning with an artificial organ or body part for the rest of their life can be very dangerous and unpredictable. It is a real risk as the implants may malfunction, have dangerous side effects, or are rejected by the immune system. There have been negative experiences towards breast implants and artificial hearts already with the body rejecting the technology. It is hard to risk a person’s life on a few clinical tests with humans or animals. Olsen and Kyree-Friis (2009) stated that artificial organs should be clinically tested over years or even decades with a large number of people. However, this raises ethical issues as we are creating human guinea pigs.</p>
 
-<!-- Sign and date the page, it's only polite! -->
-<address>Made 1 March 2021<br>
-  by Tony Clear.</address>
+<br>
+<br>
+<br>
+<br>
+  
+<h1>Price</h1>
+<br>
+ 
+<p>Another problem is the price of even doing the procedure to implement the artificial body part or organ. Since there is a possibility that the body would reject the artificial organ or body part, putting down thousands of dollars to put in the device is sometimes just a huge risk in itself for people who don’t have that financial security or stability.</p>
 
+<br>
+<br>
+<br>
+<br>
+  
+ <h1>Security</h1>
+ <br> 
+  
+  <p><img src="img/cybsec.jpg" alt="security" style="float:right; margin-left:15px; width:350px; height:250px;">Bionic hands are being 3D printed with plastic, metal and composites . The arms can be manufactured to contain a range of smart features. The smart features can include inbuilt display, an NFC chip which allows for contactless payments, functions like a smart watch and a GSM module. All these features require access to the cloud, and since it needs to access the cloud this makes the bionic arms susceptible to security issues more precisely people hacking into the arm. This has paved the way for potential attacks against prosthetic users.</p>
+ 
+ <br>
+ <br>
+ <br>
+<br>
 
-<script type="text/javascript" src="java.js"></script> 
+<h1>Distributive Justice</h1>
+<br>
+  
+<p><img src="img/10.jpg" style="float:left; margin-right:20px; width:300px; height:300px;">“The development of increasingly sophisticated prostheses and implants raises issues of distributive justice” (Brey, 2005). Will there be a cheap and expensive implant? High quality and low quality one? If someone can’t afford the artificial body part or organ, can they not get what they need? Or does everyone have a moral right for one? If only certain people are lucky enough to get the artificial organ or body part this will create a number of ethical problems for people. There are already a number of practical ethical issues such as damage to an artificial limb isn’t treated the same and as fair as to bodily damage. If someone else was to break an artificial body part, it is up to the owner to pay for it. Also, when someone with a prosthetic is incarcerated, it is usually taken off them as it is seen as a weapon. This limits the movement and leaves them at a disadvantage in prison. 
+</p>
+
+<br>
+<br>
+<br>
+<br>
+
+  
+<h1>Human Augmentation</h1>
+<br>
+ <p><img src="img/aug.jpg" style="float:right; margin-left:15px; width: 300px; height: 300px;">
+   Human augmentation is the physical or mental enhancement of the human body to perform better. This raises questions which could impact human life in the future. What if technology reaches a point when artificial body parts or limbs perform a lot better than how our body naturally is? This would make everyone want to be artificial and will create bionic people. How far could this go? “If certain augmentations get very popular, there is also a risk that they will become accepted as the norm, and people without one will be seen as cripples” (Brey 2005).
+</p>
+  
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<footer id="footer">
+
+    <div class="copyright">
+    <p>Assignment 3</p>
+    </div>
+
+  <script type="text/javascript" src="java.js"></script>
+</footer>
 
 </div>
 </div>
