--- a/process.html
+++ b/process.html
@@ -1,119 +1,3 @@
-<<<<<<< HEAD
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html>
-<head>
-  <title>Home</title>
-    <link rel="stylesheet" href="newstyle.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-</head>
-
-<body>
-<div id="page-container">
-<div id="content-wrap">
-
-<Button onclick="topFunction()" id="back-to-top" title="Back to top">&uarr;</Button>
-
-<!-- my nav bar-->
-<div class = "menu-bar">
-  <ul>
-    <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a href="topic.html"><i class="fas fa-book-medical"></i>Topic</a>
-       <div class = "sub-menu-1">
-        <ul>
-          <li><a href="opp.html">Opportunites</a></li>
-          <li><a href="risk.html">Risks</a></li>
-          <li><a href="choices.html">Choice</a></li>
-        </ul>
-       </div> 
-    </li>
-
-    <li><a><i class="fas fa-balance-scale"></i>Ethical</a>
-     <div class = "sub-menu-1">
-        <ul>
-          <li><a href="reflec.html">Ethical Reflections</a></li>
-        </ul>
-      </div>
-    </li>
-    <li><a><i class="fas fa-info-circle"></i>About</a>
-      <div class = "sub-menu-1">
-        <ul>
-          <li><a href="references.html">References</a></li>
-          <li><a href="process.html">Process Support</a></li>
-        </ul>
-      </div>
-    </li>  
-   </ul>
-</div>
-<br>
-<br>
-<br>
-
-
-<!-- Main content -->
-<h1>CTiS: Impact of Technology in Health Care</h1>
-
-<br>
-<br>
-
-<p>In general technology has had a gigantic impact on the medical field for centuries, there are multiple examples of this positive impact. One example is there has been improved access to Medical information and data, improved lines of communication and the improved treatment of the sick. However, what we want to specifically focus on is the impact of technology on bionic people and artificial body parts.</p>
-
-<br>
-<br>
-
-<p>We will be researching the future possibilities that can lie ahead for people who need artificial body parts and limbs. We want to see what new doors that could be open for this technology that is still being developed and what could we expect from this new technology.</p>
-
-<br>
-<br>
-<br>
-
-<h1>Research:</h1>
-<br>
-
-<p>The technological advances in health care are making it possible for people to have artificial body parts and organs. “The use of artificial organs is likely to increase in the future, given technological advances, increases in chronic diseases, and limited donor organs” (Walker 2021). However, the use of these devices raises ethical issues relating to conceptualisation, health and safety, distributive justice, and human augmentation.</p>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-<img src="img/thealth.jpg" alt="healthcare" class="center">
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-
-
-
-
-
-<footer id="footer">
-
-    <div class="copyright">
-    <p>Assignment 3</p>
-    </div>
-
-  <script type="text/javascript" src="java.js"></script>
-</footer>
-
-</div>
-</div>
-
-</body>
-</html>
-=======
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
@@ -167,29 +51,31 @@
 
 <!-- Main content -->
 <h1>Process Support</h1>
+<br>
+<br>
 
-<p>Links to the process support pages</p>
+<p>These are links for the process support pages</p>
 
 <br>
 <br>
 <table>
+  <tr>
     <th>Team Formation</th>
     <th>Topic Proposal</th>
     <th>Peer Evaluation</th>
-    <th>Peer Evaluation</th>
-    <th>Peer Evaluation</th>
-    <th>Peer Evaluation</th>
-    <th>Peer Evaluation</th>
+    <th>Meeting Minutes</th>
+    <th>Project Portfolio</th>
+    <th>Guideline Conformance</th>
   </tr>
   <tr>
-    <td>Vincent Kong</td>
-    <td>20112750</td>
-    <td><a href="vincent.html">Link</a></td>
+    <td><a href="formation.html">Link</a></td>
+    <td><a href="proposal.html">Link</a></td>
+    <td><a href="peer.html">Link</a></td>
+    <td><a href="meeting.html">Link</a></td>
+    <td><a href="portfolio.html">Link</a></td>
+    <td><a href="conformance.html">Link</a></td>
   </tr>
-  <tr>
-    <td>Jin Hyuck Kim</td>
-    <td>18026228</td>
-    <td><a href="brendon.html">Link</a></td>  </tr>
+   
 </table>
 
 
@@ -205,8 +91,22 @@
 <br>
 <br>
 <br>
-
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 
 
@@ -227,4 +127,4 @@
 
 </body>
 </html>
->>>>>>> f7b461b9d9b358d5983e6ebdc5373af4e2cdd39c
+
