--- a/brendon.html
+++ b/brendon.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>Vincent's Ethical Reflection</title>
+  <title>Jin Hyuck's Ethical Reflection</title>
     <link rel="stylesheet" href="newstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
@@ -87,93 +87,3 @@
 
 </body>
 </html>
-=======
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html>
-<head>
-  <title>Vincent's Ethical Reflection</title>
-    <link rel="stylesheet" href="newstyle.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-</head>
-
-<body>
-<div id="page-container">
-<div id="content-wrap">
-
-<Button onclick="topFunction()" id="back-to-top" title="Back to top">&uarr;</Button>
-
-<!-- my nav bar-->
-<div class = "menu-bar">
-  <ul>
-    <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-    <li><a href="topic.html"><i class="fas fa-book-medical"></i>Topic</a>
-       <div class = "sub-menu-1">
-        <ul>
-          <li><a href="opp.html">Opportunites</a></li>
-          <li><a href="risk.html">Risks</a></li>
-          <li><a href="choices.html">Choice</a></li>
-        </ul>
-       </div> 
-    </li>
-
-
-    <li><a><i class="fas fa-balance-scale"></i>Ethical</a>
-     <div class = "sub-menu-1">
-        <ul>
-          <li><a href="reflec.html">Ethical Reflections</a></li>
-        </ul>
-      </div>
-    </li>
-    <li><a><i class="fas fa-info-circle"></i>About</a>
-      <div class = "sub-menu-1">
-        <ul>
-          <li><a href="references.html">References</a></li>
-          <li><a href="process.html">Process Support</a></li>
-        </ul>
-      </div>
-    </li>  
-   </ul>
-</div>
-<br>
- 
-
-<!-- Main content -->
-<h1>Ethical Reflections</h1>
-<br>
-<br>
-
-<div class="container">
-<p><div class="bold">Student Name: Jin Hyuck Kim</div>
-  <br><br>
-    <div class = "bold">Student ID: 18026228</div>
-    <br><br>
-
-
-
-
-</p>
-
-</div>
-
-
- <br>
- <br>
- <br>
-
-
-<footer id="footer">
-
-    <div class="copyright">
-    <p>Assignment 3</p>
-    </div>
-
-  <script type="text/javascript" src="java.js"></script>
-</footer>
-
-</div>
-</div>
-
-</body>
-</html>
->>>>>>> f7b461b9d9b358d5983e6ebdc5373af4e2cdd39c
