--- a/references.html
+++ b/references.html
@@ -53,7 +53,18 @@
 
 <!-- Main content -->
 <h1><div class="t-center">References</div></h1>
+<br>
+<br>
+<p> Baecker, Ronald M.(2019). Computers and Society : Modern Perspectives, Oxford University Press, . 
+ <br>
+    <br>
+    <div class="t-indent">doi:10.1093/oso/9780198827085.001.0001</div>
+    <br>
+    <br>
+       <div class="t-indent"><a href="https://ebookcentral.proquest.com/lib/aut/detail.action?docID=5844143." target="blank">"https://ebookcentral.proquest.com/lib/aut/detail.action?docID=5844143."</a></div>
+    </p>
 
+<br>
 <br>
 <br>
 
@@ -66,10 +77,28 @@
 <br>
 <br>
 
+  <p>Johns Hopkins University Applied Physics Laboratory. (2014, December 17). Amputee Makes History with APL's Modular Prosthetic Limb. 
+    <br>
+    <br>
+       <div class="t-indent"><a href="https://www.newswise.com/articles/amputee-makes-history-with-apl-s-modular-prosthetic-limb
+" target="blank">"https://www.newswise.com/articles/amputee-makes-history-with-apl-s-modular-prosthetic-limb"</a></div>
+   </p>
+<br>
+<br>
+<br>
+
   <p>Olsen, J., & Kyree-Friis, J. (2009). New Waves in Philosophy of Technology. Palgrave
   <br>
     <br> 
        <div class="t-indent"><a href="https://doi.org/10.1057/9780230227279" target="blank">Macmillan UK. https://doi.org/10.1057/9780230227279</a></div>
+    </p>
+<br>
+<br>
+<br>  
+  <p>Prostheses. (n.d.). 
+  <br>
+  <br> 
+       <div class="t-indent"><a href="https://www.healthdirect.gov.au/prostheses" target="blank">https://www.healthdirect.gov.au/prostheses</a></div>
     </p>
 <br>
 <br>
