--- a/meeting.html
+++ b/meeting.html
@@ -63,14 +63,14 @@
 <p><b>Team Coordinator/Leader:</b> Jin Hyuck Kim</p>
 
 <br>
-<p>This is the link to get to our teams meeting minutes<a href="https://drive.google.com/drive/folders/1WTqiRUhoulZt8CoDOY6bY8VZOSC0TSLK"></a>Click Here</p>
+<p>This is the link to get to our teams meeting minutes <a href="https://drive.google.com/drive/folders/1WTqiRUhoulZt8CoDOY6bY8VZOSC0TSLK"> Click Here</a></p>
 <br>
 <br>
 <br>
 
 
 
-<img src="img/thealth.jpg" alt="healthcare" class="center">
+
 
 <br>
 <br>
