--- a/proposal.html
+++ b/proposal.html
@@ -170,7 +170,7 @@ Specially made for the individuals. </td>
 <br>
 <br>
 <br>
-<p><b>Link to Team Repository:</b><a href="https://github.com/VincentNoc/1315.github.io"> Team Repository Link</a></p>
+<p><b>Link to Team Repository:</b><a href="https://github.com/VincentNoc/group1315.github.io"> Team Repository Link</a></p>
 
 <br>
 <br>
