--- a/portfolio.html
+++ b/portfolio.html
@@ -50,36 +50,26 @@
 
 
 <!-- Main content -->
-<h1>CTiS: Impact of Technology in Health Care</h1>
-
-<br>
+<h1>Project Portfolio</h1>
 <br>
 
-<p>In general technology has had a gigantic impact on the medical field for centuries, there are multiple examples of this positive impact. One example is there has been improved access to Medical information and data, improved lines of communication and the improved treatment of the sick. However, what we want to specifically focus on is the impact of technology on bionic people and artificial body parts.</p>
+  <p><b>Due Date:</b> 04/06/2021</p>
+  <br>
+  <p><b>Team name: 1315</b> 04/06/2021</p>
 
 <br>
-<br>
-
-<p>We will be researching the future possibilities that can lie ahead for people who need artificial body parts and limbs. We want to see what new doors that could be open for this technology that is still being developed and what could we expect from this new technology.</p>
+<p><b>Team Coordinator/Leader: </b> Jin Hyuck Kim</p>
 
 <br>
+<p><b>Link to Team Repository:</b><a href="https://github.com/VincentNoc/group1315.github.io"> Team Repository Link</a></p>
 <br>
 <br>
 
-<h1>Research:</h1>
-<br>
-
-<p>The technological advances in health care are making it possible for people to have artificial body parts and organs. “The use of artificial organs is likely to increase in the future, given technological advances, increases in chronic diseases, and limited donor organs” (Walker 2021). However, the use of these devices raises ethical issues relating to conceptualisation, health and safety, distributive justice, and human augmentation.</p>
-
-<br>
-<br>
-<br>
-<br>
 <br>
 
 
 
-<img src="img/thealth.jpg" alt="healthcare" class="center">
+
 
 <br>
 <br>
@@ -90,6 +80,22 @@
 <br>
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
 
 
 
